--- a/src/main/web/WEB-INF/web.xml
+++ b/src/main/web/WEB-INF/web.xml
@@ -3,8 +3,8 @@
   <display-name>crmjava</display-name>
 
   <welcome-file-list>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>index.html</welcome-file>
+    <welcome-file>/views/index.jsp</welcome-file>
+    <welcome-file>/views/index.html</welcome-file>
   </welcome-file-list>
 
   <servlet>
